# codkit

./: .clang-format  .gitmodules  CMakeLists.txt  api.lua
doc/: api.html
examples/: simple_score_webserver.lua
examples/html/: index.html
src/: address.h  detours.cpp  detours.h  game.cpp  game.h  httpserver.cpp  httpserver.h  logging.cpp  logging.h  lua.cpp  lua.h  main.cpp  msg.cpp  msg.h  proc.cpp
src/lua/: base.cpp  base.h  httpserver.cpp  httpserver.h
